@@ -1,3 +1,8 @@
+Mon Feb  9 13:40:21 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* ext/stringio/stringio.c (strio_ungetc): should allow ungetc at
+	  the top of the buffer.  ref #701
+
 Thu Feb  5 09:38:48 2009  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/nkf/nkf-utf8/nkf.c (h_conv): can't guess UTF-8 input in
